save before animation wallpaper start

--- a/legals.html
+++ b/legals.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SemSchwab/legals</title>
+    <link
+      rel="shortcut icon"
+      href="./pictures/flaticon.png"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="./basics.css" />
     <link rel="stylesheet" href="./legals.css" />
   </head>
