bug fixes, picture changes

--- a/legals.html
+++ b/legals.html
@@ -22,7 +22,7 @@
       <p>
         Sem Schwab<br />
         <br />
-        <a href="mailto:[Email Address]">sem.schwab@gmx.de</a><br />
+        <a href="mailto:business@semschwab.com">business@semschwab.com</a><br />
       </p>
 
       <h3>General Information</h3>
@@ -98,7 +98,7 @@
       <p>
         If you have any questions or concerns about this privacy policy, please
         feel free to contact me:<br />
-        <a href="mailto:[Email Address]">sem.schwab@gmx.de</a>
+        <a href="mailto:business@semschwab.com">business@semschwab.com</a>
       </p>
 
       <p><strong>Effective date:</strong> 24.11.2024</p>
@@ -134,7 +134,7 @@
       <p>
         If you have any questions about this legal notice, please feel free to
         contact me:<br />
-        <a href="mailto:[Email Address]">sem.schwab@gmx.de</a>
+        <a href="mailto:business@semschwab.com">business@semschwab.com</a>
       </p>
 
       <p><strong>Effective date:</strong> 24.11.2024</p>
