--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
           <h3>In this project i developed a Pokémon Trainer Registry. <br><br>I learned how APIs work and how to use them to integrate external data into my web applications. <br><br> I now understand the basics of HTTP requests and responses, including GET, POST, PUT, and DELETE methods. I became comfortable working with tools like the Fetch API to fetch data from open APIs, process it and display it on the frontend.<br>
           <br>https://pokeapi.co/
           <br><br>
-          <button id="about-button">Open Project<img src="./pictures/link-open-icon.png" height="20px"></button>
+          <a href="./Pokedex/index.html" target="_blank"><button id="about-button">Open Project<img src="./pictures/link-open-icon.png" height="20px"></button></a>
           </h3>
         </div>
         </div>
